--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <i class="fa fa-money w3-xxlarge"></i>
                 <p>SERVICE FEE</p>
             </a>
-            <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+            <a href="#contac" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
                 <i class="fa fa-envelope w3-xxlarge"></i>
                 <p>CONTACT</p>
             </a>
@@ -45,7 +45,7 @@
     <main class="container">
         <section class="homes" id="home">
             <div class="aboutpic mt-5">
-                <h1>I'm Minhajul Abedin Rahat</h1>
+                <h1>I'm RAHAT MINHAJ.</h1>
                 <h6 class="mt-3">Front End Web Developer</h6>
                 <img class="mt-5" src="images/rahat2.jpg" alt="">
             </div>
@@ -311,8 +311,25 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer id="contac" class="container mt-5 w3-content w3-justify w3-text-grey w3-padding-64 ">
+        <section class="contact homes">
+            <h2>Contact</h2>
+            <div class="contacts mt-5 ">
+                <i class="fa fa-map-marker w3-xlarge"></i>
+                <p>23/25 Bamoil,Demra,Dhaka-1361</p>
 
+            </div>
+            <div class="contacts mt-2 ">
+                <i class="fa fa-phone w3-xlarge"></i>
+                <p>Phone:+8801521439303</p>
+
+            </div>
+            <div class="contacts mt-2 ">
+                <i class="fa fa-envelope w3-xlarge"></i>
+                <p>Email:rahatminhaj444@gmail.com</p>
+
+            </div>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
