--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
                 <p>CONTACT</p>
             </a>
         </nav>
+
+        <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
+            <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
+              <a href="#" class="w3-bar-item w3-button" style="width:20% !important">HOME</a>
+              <a href="#about" class="w3-bar-item w3-button" style="width:20% !important">ABOUT</a>
+              <a href="#project" class="w3-bar-item w3-button" style="width:20% !important">PROJECTS</a>
+              <a href="#service" class="w3-bar-item w3-button" style="width:20% !important">SERVICE FEE</a>
+              <a href="#contac" class="w3-bar-item w3-button" style="width:20% !important">CONTACT</a>
+            </div>
+          </div>
     </header>
 
     <main class="container">
